[tool.poetry]
name        = "pydp"
version     = "1.1.3rc3"
description = ""
authors     = [
    "Chinmay Shah <chinmayshah3899@gmail.com>",
]
license     = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black            = "*"
black-nb         = [{ version = "<0.7", python = "<3.8" }, { version = "^0.7", python = "^3.8" }]
bumpversion      = "==0.5.3"
coverage         = "*"
gcovr            = "*"
isort            = "*"
jupyter          = "*"
matplotlib       = "*"
mypy             = "*"
nbqa             = "*"
pandas           = [{ version = "<0.25.0", python = "<3.8" }, { version = "^1.2.3", python = "^3.8" }]
pre-commit       = "*"
pytest           = "*"
pytest-randomly  = "*"
pytest-sugar     = "*"
pytest-xdist     = "*"
seaborn          = "*"
setuptools       = "*"
scikit-learn     = [{ version = "<1.2.2", python = "<3.8" }, { version = "^1.2.2", python = "^3.8" }]
sphinx           = "*"
sphinx-rtd-theme = "*"
twine            = "*"
wheel            = "*"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"